# PY

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  pytest.ini  run_tests.sh
config/: settings.py  test_data.json
contact_list_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
helpers/: api_client.py
pages/: contacts_page.py  login_page.py
reports/api_failures/: test_contact_crud_17-23-12.json  test_contact_crud_17-27-43.json  test_login_returns_token_19-07-02.json
tests/: conftest.py
tests/acceptance/: test_api.py  test_ui.py
tests/helpers/: api_client.py  app_flows.py
tests/smoke/: test_api.py  test_ui.py
