[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-list-qa"
version = "1.0.0"
description = "Pytest + Playwright tests for qa-sendbox.org Contact List App"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "playwright>=1.40.0",
    "allure-pytest>=2.13.0",   # <-- добавлено
]

[tool.setuptools]
packages = ["config"]