[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-list-qa"
version = "1.0.0"
description = "Pytest + Playwright tests for qa-sendbox.org Contact List App"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "playwright>=1.40.0",
    "allure-pytest>=2.13.0",
]

[tool.setuptools]
packages = ["config"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
timeout = 300

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

markers = [
    "smoke: Quick critical checks",
    "acceptance: Full scenarios",
    "ui: Browser tests Playwright",
    "api: Backend and endpoint verific.",
    "crud: Create, Read, Update, Delete operations",
    "favorite: Toggle favorite status",
    "regression: Full regression test suite",
]